[tool.poetry]
name = "sql-model-test"
version = "0.1.0"
description = ""
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_model_test"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
